--- a/css/sport.css
+++ b/css/sport.css
@@ -1,6 +1,7 @@
 <style type="text/css">
         body {
-	background-color:#088A08;
+	color:#ff0000
+	background-color:#161616;
 	background-image: url(images/computer.jpg);
 	background-position: center;
 	background-repeat: no-repeat;	
