--- a/css/sport.css
+++ b/css/sport.css
@@ -1,15 +1,20 @@
-<style type="text/css">
-        body {
-	color:#ff0000
-	background-color:#161616;
-	background-image: url(images/computer.jpg);
-	background-position: center;
-	background-repeat: no-repeat;	
-	height:100%;
-	font-family:Verdana, Arial, Helvetica, sans-serif;
-	padding:100px 0 100px 0;
-	
+/*removed the image and did straight background*/
+    body {
+	background-color:#000000;
+	height:auto;
+	margin-top: 0px;
+	padding:10px 0 125px 0px;
+	color:#ff0000;
+    font-family:Verdana, Arial, Helvetica, sans-serif;
 }
+/* added the h1*/
+h1 {
+    text-align: center;
+    color:#000;
+    text-shadow:2px 2px #818181;
+    font-family:Verdana, Arial, Helvetica, sans-serif;
+}
+
 label {
 	display:block;
 	font-size:16px;
@@ -68,55 +73,79 @@ textarea#title {
 	font-size:18px;
 	line-height:22px;
 }
-
+/*numbers for the game category*/
 #game h3 {
 	color:#fff;
 	text-align:center;
 	font-size:20px;
 	font-weight:bold;
 }
-
-#game tbody td, #game thead th {
+/*headings for the column categories*/
+        #game thead th {
 	vertical-align: middle;
-	background-color:#088A08;
+	background-color:#818181;
 	padding:5px;
 	text-align:center;
 	width:19%;
-	color:#ffff5f;
+	color:#818181;
+        text-shadow:2px 2px #000;
 	height:60px;
 	font-size:20px;
+	border: 2px solid #fff;
+	
+}
+#game thead td {
+	vertical-align: middle;
+	background-color:#818181;
+	padding:5px;
+	text-align:center;
+	width:19%;
+	color:#818181;
+        text-shadow:2px 2px #000;
+	height:100px;
+	font-size:20px;
+	border: 2px solid #fff;
 	
 }
 
+/*columns*/
+/*background image in cells*/
 #game tbody td {
-	cursor:pointer;
-	height:100px;
-    border:3px solid #2a3698;
-    background-image: url(images/sm-monitor.png);
-	background-position: center;
-	background-repeat: no-repeat;
-	
+    cursor:pointer;
+    width:100px;
+    height:100px;
+    border:3px solid #fff;
+    background-color: #818181;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 #game tbody td.ie-hack {
-	border:3px solid #ffff5f;
+	border:3px solid #818181;
 }
 
 /*#game tbody td.clean:hover {
 	border:3px solid #ffff5f;
 }
-
 #game tbody td.dirty:hover {
 	border:3px solid #2a3698;
 }*/
 
 #game tbody td.dirty h3 {
-	color:#2a3698;	
+	color:#f00;
+	 background-image: url(../images/nation-logo.jpg);
+	 width:100%;
+         height:100px;
+	text-align:center;
+	text-shadow:2px 2px #000;
+	background-position: center;
+        background-repeat: no-repeat;
+	
 }
 
 #game tfoot td {
 	text-align: center;
-	background-color:#2a3698;
+	background-color:#818181;
 }
 
 .submit {
@@ -127,7 +156,7 @@ textarea#title {
 	display: none;
 	background-color:#fff;
 	padding:5px;
-	border:2px dashed #ccc;
+	border:2px dashed #818181;
 }
 
 #modal {
@@ -143,22 +172,23 @@ textarea#title {
 
 #options {
 	/*label area*/
-	width:500px;
+	width:800px;
 	padding:10px;
 	margin:auto;
-	margin-top:75px;
+	margin-top:25px;
 }
 
 #options h1 {
-	color:#088A08;
 	font-size:50px;
 	text-align:center;
+	color:#000;
+        text-shadow:2px 2px #818181;
 }
 
 #options label {
 	text-align: center;
 	font-size:20px;
-	color:#088A08;
+	color:#000000;
 }
 
 #options select, #options label, #options input {
@@ -174,7 +204,7 @@ textarea#title {
 }
 #options p {
 	margin-bottom:0px;
-	color:#088A08;
+	color:#818181;
 	font-weight: bold;	
 }
 
@@ -190,10 +220,10 @@ textarea#title {
 #stats {
 	position:fixed;
 	bottom:0;
-	background-color:#ffffff;
+	background-color:#818181;
 	width:100%;
 	text-align:center;
-	height:110px;
+	height:100px;
 	display:none;
 	left:0;
 }
@@ -208,7 +238,9 @@ textarea#title {
     font-size:18px;
     font-weight:bold;
     text-align:center;
+    color: #fff;
     font-family: Verdana, Arial, Helvetica, sans-serif;
+    background-color:#818181;
     width:100%;
     display:block;
 }
@@ -218,6 +250,7 @@ textarea#title {
 }
 
 #stats table th {
+	background-color:#818181;
 	border-bottom:1px solid black;
 }
 
@@ -228,7 +261,7 @@ input.add-points {
 	font-size:20px;
 	cursor:pointer;
 	padding:0px;
-	background-color:#ffffff;
+	background-color:#818181;
 	border:none;
 	display:inline;
 }
@@ -240,7 +273,7 @@ input.subtract-points {
 	font-size:20px;
 	cursor:pointer;	
 	padding:0px;
-	background-color:#FFFFFF;
+	background-color:#818181;
 	border:none;
 	display:inline;
 }
@@ -249,7 +282,7 @@ input.subtract-points {
 	display:none;
 	height:100%;
 	width:100%;
-	background-color:#2a3698;
+	background-color:#818181;
 	color:#FFFFFF;
 	text-align:center;
 }
