--- a/css/sport.css
+++ b/css/sport.css
@@ -133,7 +133,7 @@ textarea#title {
 
 #game tbody td.dirty h3 {
 	color:#f00;
-	 background-image: url(../images/nation-logo.jpg);
+	 background-image: url(../images/teams.jpg);
 	 width:100%;
          height:100px;
 	text-align:center;
