--- a/css/sport.css
+++ b/css/sport.css
@@ -1,6 +1,6 @@
 /*removed the image and did straight background*/
     body {
-	background-color:#000000;
+	background-color:#FF0000;
 	height:auto;
 	margin-top: 0px;
 	padding:10px 0 125px 0px;
@@ -133,7 +133,7 @@ textarea#title {
 
 #game tbody td.dirty h3 {
 	color:#f00;
-	 background-image: url(../images/teams.jpg);
+	 background-image: url(images/teams.jpg);
 	 width:100%;
          height:100px;
 	text-align:center;
