--- a/css/sport.css
+++ b/css/sport.css
@@ -12,7 +12,7 @@
 h1 {
     text-align: center;
     color:#000;
-    text-shadow:2px 2px #f90909;
+    text-shadow:2px 2px;
     font-family:Verdana, Arial, Helvetica, sans-serif;
 }
 
