--- a/css/sport.css
+++ b/css/sport.css
@@ -12,7 +12,7 @@
 h1 {
     text-align: center;
     color:#000;
-    text-shadow:2px 2px;
+    text-shadow:2px 2px #818181;
     font-family:Verdana, Arial, Helvetica, sans-serif;
 }
 
@@ -88,7 +88,7 @@ textarea#title {
 	padding:5px;
 	text-align:center;
 	width:19%;
-	color:#818181;
+	color:#f90909;
         text-shadow:2px 2px #000;
 	height:60px;
 	font-size:20px;
@@ -101,7 +101,7 @@ textarea#title {
 	padding:5px;
 	text-align:center;
 	width:19%;
-	color:#818181;
+	color:#f90909;
         text-shadow:2px 2px #000;
 	height:100px;
 	font-size:20px;
@@ -183,7 +183,7 @@ textarea#title {
 	font-size:50px;
 	text-align:center;
 	color:#000;
-        text-shadow:2px;
+        text-shadow:2px 2px #f90909;
 }
 
 #options label {
