--- a/css/sport.css
+++ b/css/sport.css
@@ -84,7 +84,7 @@ textarea#title {
 /*headings for the column categories*/
         #game thead th {
 	vertical-align: middle;
-	background-color:#f90909;
+	background-color:#090df9;
 	padding:5px;
 	text-align:center;
 	width:19%;
