--- a/css/sport.css
+++ b/css/sport.css
@@ -117,7 +117,9 @@ textarea#title {
     height:100px;
     border:3px solid #fff;
     background-color: #f90909;
-    background-position: center;
+  /*# made background images */
+	background-image:"images/teams.jpg";
+	background-position: center;
     background-repeat: no-repeat;
 }
 
