--- a/css/sport.css
+++ b/css/sport.css
@@ -7,7 +7,9 @@
 	padding:10px 0 125px 0px;
 	color:#ff0000;
     font-family:Verdana, Arial, Helvetica, sans-serif;
-}#navigation ul{
+}
+
+#navigation ul{
 	width:auto; 
 	height:32px; 
 	background-color:#f00;
@@ -121,7 +123,7 @@ textarea#title {
 }
 /*numbers for the game category*/
 #game h3 {
-	color:#fff;
+	color:#FF0000;
 	text-align:center;
 	font-size:20px;
 	font-weight:bold;
