--- a/css/sport.css
+++ b/css/sport.css
@@ -155,7 +155,6 @@ textarea#title {
 	border: 2px solid #fff;
 	
 }
-
 /*columns*/
 /*background image in cells*/
 #game tbody td {
@@ -183,7 +182,7 @@ textarea#title {
 
 #game tbody td.dirty h3 {
 	color:#f00;
-	 background-image:"images/teams.jpg";
+	 background-image:url(..images/teams.jpg);
 	 width:100%;
          height:100px;
 	text-align:center;
@@ -200,6 +199,7 @@ textarea#title {
 
 .submit {
 	margin:auto;
+	width:180px;
 }
 
 #modal {
