--- a/css/sport.css
+++ b/css/sport.css
@@ -290,7 +290,7 @@ textarea#title {
     text-align:center;
     color: #fff;
     font-family: Verdana, Arial, Helvetica, sans-serif;
-    background-color:#f90909;
+    background-color:#000;
     width:100%;
     display:block;
 }
