--- a/css/sport.css
+++ b/css/sport.css
@@ -311,7 +311,8 @@ input.add-points {
 	font-size:20px;
 	cursor:pointer;
 	padding:0px;
-	background-color:#f90909;
+	/* plus sign button */
+	background-color:#fff;
 	border:none;
 	display:inline;
 }
