--- a/css/sport.css
+++ b/css/sport.css
@@ -12,7 +12,7 @@
 #navigation ul{
 	width:auto; 
 	height:32px; 
-	background-color:#f00;
+	background-color:#808182;
 	text-align:center;
 	list-style-type: none;
 }
