--- a/css/sport.css
+++ b/css/sport.css
@@ -12,7 +12,7 @@
 #navigation ul{
 	width:auto; 
 	height:32px; 
-	background-color:#3333ff;
+	background-image:"images/header_.jpg";
 	text-align:center;
 	list-style-type: none;
 }
